--- a/styles/architects.css
+++ b/styles/architects.css
@@ -24,6 +24,17 @@
 .bg-light{
   background-color: rgba(255, 144, 14, 0.1);
 }
+
+.btn-primary{
+  background-color: #FF900E;
+  color: white;
+  padding: 20px 25px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  font-family: "Work Sans", serif;
+  border-radius: 8px;
+  border: none;
+}
   /* header styles */
 
   /* navbar related styles */
@@ -58,5 +69,22 @@
   max-width: 850px;
   margin: 0 auto;
   text-align: center;
-  font-size: 4rem;
+  margin-bottom: 50px;
  } 
+
+ .banner-title{
+  font-weight: 700;
+  font-size: 4rem;
+ }
+
+ /* image responsive korar jonno image tak 100% kore dilei hoy */
+ .banner-image{
+  width: 100%;
+ }
+
+ /* responsive media query */
+ @media screen and (max-width: 576px) {
+    .navbar, .nav-links{
+      flex-direction: column;
+    }
+ }
