--- a/styles/architects.css
+++ b/styles/architects.css
@@ -43,6 +43,15 @@ main{
   max-width: 1440px;
   margin: 0 auto;
 }
+
+main > section{
+  margin-top: 130px;
+}
+
+.section-title{
+  font-size: 2.8rem;
+  font-weight: 700;
+}
   /* header styles */
 
   /* navbar related styles */
@@ -104,11 +113,6 @@ main{
 .our-features{
   margin-left: 130px;
   max-width: 530px;
-}
-
-.feature-title{
-  font-size: 2.8rem;
-  font-weight: 700;
 }
 
 #quick-list{
